# governance-sigs

./: .gitreview  .yamllint  .zuul.yaml  README.rst  archived-sigs.yaml  completed-sigs.yaml  requirements.txt  setup.cfg  sigs.yaml  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  tact-sig.rst
doc/source/_extra/: .htaccess
doc/source/_exts/: sigtable.py  teamtable.py
doc/source/reference/: sig-guideline.rst  sig-status.rst
