[metadata]
name = openstack-governance-sigs
version = 2014.1
summary = OpenStack SIGs Documents
description-file =
    README.rst
author = OpenStack Meta SIG
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/governance-sigs/

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[pbr]
warnerrors = True
